fix: align group title

--- a/apps/team-up/src/app/modules/board/components/group/group.component.scss
+++ b/apps/team-up/src/app/modules/board/components/group/group.component.scss
@@ -1,9 +1,10 @@
 .title {
+  align-items: center;
   background-color: #5fb0b7;
   border-radius: 16px;
   color: var(--white);
   cursor: pointer;
-  display: block;
+  display: flex;
   font-family: "Ubuntu", -apple-system, system-ui, sans-serif;
   height: 35px;
   padding: var(--spacing-1);
